<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/background_color"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/app_logo"
        app:srcCompat="@drawable/notes_logo"
        android:layout_marginTop="130dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notesapp"
        android:textSize="32sp"
        android:textStyle="bold"
        android:id="@+id/tv_app"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/primaryColor"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="@id/iv_logo"
        app:layout_constraintEnd_toEndOf="@id/iv_logo"
        android:layout_marginTop="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember_what_makes_your_life_better"
        android:textSize="18sp"
        android:id="@+id/tv_sub"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed-light"
        android:textColor="@color/primaryColor"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_app"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/shashank_gautam"
        android:textColor="@color/primaryColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:theme="@style/ProgressBar"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub" />

</androidx.constraintlayout.widget.ConstraintLayout>