<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:layout_height="wrap_content">

    <View
        android:layout_width="130dp"
        android:layout_height="5dp"
        android:background="#747474"
        android:layout_margin="10dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/you_are_deleting_the_note_if_you_want_to_continue_the_process_then_press_yes_else_press_no"
        android:layout_marginHorizontal="12dp"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="#A8A8A8"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:backgroundTint="@color/background_color"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textSize="16sp"
                android:id="@+id/on_press_yes"
                android:background="@drawable/btn_bg"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@color/white"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="8dp"
                android:text="@string/no"
                android:textSize="16sp"
                android:id="@+id/on_press_no"
                android:textColor="@color/black"
                android:background="@drawable/dialog_btn_bg_no"
                android:fontFamily="sans-serif-condensed-medium"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>